# ROS

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/action_exercise/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh
devel/include/action_exercise/: ChargingAction.h  ChargingActionFeedback.h  ChargingActionGoal.h  ChargingActionResult.h  ChargingFeedback.h  ChargingGoal.h  ChargingResult.h
devel/lib/action_exercise/: charging_client  charging_server
devel/lib/pkgconfig/: action_exercise.pc  catkin_tools_prebuild.pc
devel/share/action_exercise/cmake/: action_exercise-msg-extras.cmake  action_exercise-msg-paths.cmake  action_exerciseConfig-version.cmake  action_exerciseConfig.cmake
devel/share/action_exercise/msg/: ChargingAction.msg  (+6 more)
logs/action_exercise/: build.check.002.log.stderr  build.check.003.log.stderr  build.check.004.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr
src/action_exercise/: CMakeLists.txt  package.xml
src/action_exercise/action/: Charging.action
src/action_exercise/src/: charging_client.cpp  charging_server.cpp
src/apriltag_tf2_practice/: CMakeLists.txt  package.xml
src/apriltag_tf2_practice/launch/: cv.launch  nodelet.launch  trasforms.launch
src/apriltag_tf2_practice/src/: cv_tag.cpp  scan.cpp  tag_manipulation.cpp
(+106 files in other folders)
